# miles-credit

./: .gitignore  Makefile  README.md  create_derecho_env.sh  environment-unet.yml  environment.yml  environment_cpu.yml  environment_gpu.yml  grid.py  model_multi_example-v2025.2.0.yml  model_multi_example-v2025.2.0_ERA5.yml  pyproject.toml  requirements.txt  ruff.toml  ruff_summary.txt  setup.py  wxformer_1h.o7895186_derechoenverr
applications/: Make_Climate_Initial_Conditions.py  Quick_Climate.py  Quick_Climate_Ensembles.py  Quick_Climate_Infite.py  Quick_Climate_Year_Slow_parrallel.py  U_ptype_gfs_point.ipynb  U_ptype_mping.ipynb  U_ptype_with_gfs.ipynb  calc_global_solar.py  ensemble_eval.py  gefs_init.py  gfs_init.py  graph_edges.py  graph_edges_knn.py  model_summary.py  predict.py  predict404.py  predict_climate.py  predict_weather.py  rollout.py  rollout_ens_batcher.py  rollout_ensemble.py  rollout_metrics.py  rollout_metrics_batcher.py  rollout_metrics_noisy_ics.py  rollout_metrics_noisy_model.py  rollout_realtime.py  rollout_to_netcdf.py  rollout_to_netcdf_batcher.py  rollout_to_netcdf_new.py  rollout_to_zarr.py  scaler.py  train.py  train404.py  train_deprecated.py  train_multistep.py  train_multistepper.py  train_universal.py  trainer_unet.py  trainer_vit2d.py  (+2 more)
climate/: RUN_Climate_RMSE.out  RunQuickClimate.sh
config/: Model_1deg.yml  README.md  climate_rollout.yml  conus404.yml  crossformer-1dg.yml  crossformer.yml  crossformer_6hrCached.yml  example-v2025.2.0-ensemble.yml  example-v2025.2.0.yml  example.yml  example_ensemble_eval.yml  example_physics.yml  (+39 more)
(+194 files in other folders)
